Aligned most impactful sentences and fixed div height

--- a/public/styles.css
+++ b/public/styles.css
@@ -491,7 +491,7 @@ font-family: 'Noto Serif', serif; */
 #impactful {
   margin-left: 50px;
   margin-right: 50px;
-  height: 390px;
+  height: 399px;
 }
 
 #loginbuttons {
